examples/compiler_errors/adversarial/type_and_effect_modules/Main.flx
// expect: compile_error
// expect-error: E400
// expect-error: E300

import TypeBroken
import EffectBroken

fn main() -> Unit {
    let entry = 1
}
